--- a/packages/manager/apps/web/client/app/hosting/database/private-sql-activation/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/hosting/database/private-sql-activation/translations/Messages_it_IT.json
@@ -27,8 +27,7 @@
   "privatesql_activation_version_v_redis_32": "Redis 3.2",
   "privatesql_activation_version_v_mongodb_40": "MongoDB 4.0",
   "privatesql_activation_version_v_redis_40": "Redis 4.0",
-  "privatesql_activation_option_private-sql-512": "SQL Privato 512 MB",
+  "privatesql_activation_option_private-sql": "SQL Privato {{diskSpace}} MB",
   "privatesql_activation_success": "L’attivazione del database è stata eseguita correttamente. Consulta la <a href=\"{{ billUrl }}}\" target=\"_blank\" rel=\"noopener\">tua fattura</a>.",
-  "privatesql_activation_success_bc": "Il tuo <a href=\"{{ bcUrl }}\" target=\"_blank\" rel=\"noopener\">ordine</a> è stato generato. Effettua il pagamento per attivare il tuo database.",
-  "privatesql_activation_option_private-sql": "SQL Privato {{diskSpace}} MB"
+  "privatesql_activation_success_bc": "Il tuo <a href=\"{{ bcUrl }}\" target=\"_blank\" rel=\"noopener\">ordine</a> è stato generato. Effettua il pagamento per attivare il tuo database."
 }
