--- a/packages/manager/apps/web/client/app/hosting/database/private-sql-activation/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/hosting/database/private-sql-activation/translations/Messages_pl_PL.json
@@ -27,8 +27,7 @@
   "privatesql_activation_version_v_redis_32": "Redis 3.2",
   "privatesql_activation_version_v_mongodb_40": "MongoDB 4.0",
   "privatesql_activation_version_v_redis_40": "Redis 4.0",
-  "privatesql_activation_option_private-sql-512": "Prywatny SQL 512 MB",
+  "privatesql_activation_option_private-sql": "Private SQL {{diskSpace}} MB",
   "privatesql_activation_success": "Baza danych została włączona. Wyświetl <a href=\"{{billUrl }}\" target=\"_blank\" rel=\"noopener\">fakturę</a>.",
-  "privatesql_activation_success_bc": "Twoje <a href=\"{{bcUrl}}\" target=\"_blank\" rel=\"noopener\">zamówienie</a> zostało wygenerowane. Aby włączyć bazę danych, najpierw dokonaj płatności.",
-  "privatesql_activation_option_private-sql": "Private SQL {{diskSpace}} MB"
+  "privatesql_activation_success_bc": "Twoje <a href=\"{{bcUrl}}\" target=\"_blank\" rel=\"noopener\">zamówienie</a> zostało wygenerowane. Aby włączyć bazę danych, najpierw dokonaj płatności."
 }
