--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_fr_FR.json
@@ -5,7 +5,7 @@
   "pci_projects_project_storages_containers_container_cold_archive_delete_submit_label": "Confirmer",
   "pci_projects_project_storages_containers_container_cold_archive_delete_cancel_label": "Annuler",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_1": "Votre conteneur {{containerName}} dispose encore de {{objetsCount}} objet(s).",
-  "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2": "Pour supprimer définitivement votre conteneur, il faudrait d'abord supprimer les objets qu'il comporte. Consultez notre <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">guide pour gérer les objects d'une archive avec AWS CLI</a>.",
+  "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2": "Pour supprimer définitivement votre conteneur, vous devez d'abord supprimer les objets qu'il comporte. Consultez notre <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">guide pour gérer les objects d'une archive avec AWS CLI</a>.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Le conteneur {{ containerName }} a été supprimé.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_error_delete": "Une erreur est survenue lors de la suppression du conteneur {{ containerName }} : {{ message }}."
 }
