--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/translations/Messages_fr_FR.json
@@ -1,1 +1,5 @@
-{}
+{
+  "pci_projects_project_storages_volume_backup_breadcrumb": "volume backup",
+  "pci_projects_project_storages_volume_backup_guides_overview_title": "Créer une sauvegarde d’un volume",
+  "pci_projects_project_storages_volume_backup_guides_overview_description": "Découvrez comment créer une sauvegarde d’un disque additionel Public Cloud"
+}
