--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_en_GB.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_en_GB.json
@@ -21,16 +21,16 @@
   "siret_manual_title": "Manually add your company:",
   "siret_manual_company_name": "Company name",
   "siret_manual_company_legal_form": "Legal form",
-  "siret_manual_company_legal_form_EI": "Entrepreneur individuel (EI)",
-  "siret_manual_company_legal_form_EURL": "Entreprise unipersonnelle à responsabilité limitée (EURL)",
-  "siret_manual_company_legal_form_SARL": "Société à responsabilité limitée (SARL)",
-  "siret_manual_company_legal_form_SASU": "Société par actions simplifiée unipersonnelle (SASU)",
-  "siret_manual_company_legal_form_SAS": "Société par actions simplifiée (SAS)",
-  "siret_manual_company_legal_form_SA": "Société anonyme (SA)",
-  "siret_manual_company_legal_form_SNC": "Société en nom collectif (SNC)",
-  "siret_manual_company_legal_form_SCS": "Société en commandite simple (SCS)",
-  "siret_manual_company_legal_form_SCA": "Société en commandite par actions (SCA)",
-  "siret_manual_company_legal_form_SCOP": "Société coopérative de production (Scop)",
+  "siret_manual_company_legal_form_EI": "Self-employed",
+  "siret_manual_company_legal_form_EURL": "Single personal limited liability company (EURL)",
+  "siret_manual_company_legal_form_SARL": "Private limited company (Ltd)",
+  "siret_manual_company_legal_form_SASU": "Single-person simplified joint-stock company (SASU)",
+  "siret_manual_company_legal_form_SAS": "Simplified joint-stock company (SAS)",
+  "siret_manual_company_legal_form_SA": "Public limited company (PLC)",
+  "siret_manual_company_legal_form_SNC": "General partnership (GP)",
+  "siret_manual_company_legal_form_SCS": "Limited Partnership (LP)",
+  "siret_manual_company_legal_form_SCA": "Partnership limited by shares",
+  "siret_manual_company_legal_form_SCOP": "Production cooperative",
   "siret_manual_registration_date": "Registration date",
   "siret_manual_registration_date_placeholder": "dd/mm/yyyy",
   "siret_update_search_assistant": "Search Assistant"
