--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_pt_PT.json
@@ -1,36 +1,36 @@
 {
   "siret_search_intro": "Procure a sua empresa por:",
-  "siret_search_field_label": "N.º SIRET (recomendado), N.º SIREN ou nome da empresa",
-  "siret_search_field_placeholder": "N.º SIRET, N.º SIREN ou nome da empresa",
+  "siret_search_field_label": "NIF (recomendado) ou nome da empresa",
+  "siret_search_field_placeholder": "NIF ou nome da empresa",
   "siret_search_button": "Procurar",
   "siret_search_assistant": "Voltar ao assistente de pesquisa",
   "siret_suggest_select_company": "Selecione a sua empresa:",
   "siret_suggest_many_result_title": "A sua pesquisa inclui um grande número de resultados.",
-  "siret_suggest_many_result_description": "Se não encontra a sua empresa, queira especificar a sua pesquisa ou introduzir o seu número SIRET:",
+  "siret_suggest_many_result_description": "Se não encontra a sua empresa, queira alterar a pesquisa ou introduzir o seu NIF:",
   "siret_suggest_error": "Ocorreu um erro: {{ message }}",
-  "siret_suggest_no_result": "Não encontrámos \"{{search}}\"",
+  "siret_suggest_no_result": "Não encontrámos «{{search}}»",
   "siret_suggest_no_found_company": "Não encontra a sua empresa?",
   "siret_suggest_add_manual": "Adicione-a manualmente",
-  "siret_suggest_siret": "SIRET:",
-  "siret_suggest_siren": "SIREN:",
-  "siret_vat": "N° IVA",
-  "siret_siret": "N.º SIRET",
-  "siret_vat_helper": "O número de IVA é uma menção obrigatória a inscrever nas suas faturas por qualquer montante superior a 150€.",
+  "siret_suggest_siret": "NIF:",
+  "siret_suggest_siren": "",
+  "siret_vat": "N.º IVA:",
+  "siret_siret": "NIF",
+  "siret_vat_helper": "O número de IVA é uma menção obrigatória a inscrever nas suas faturas para qualquer montante superior a 150 €.",
   "siret_optional": "facultativo",
   "siret_information_confirmation_is_correct": "Confirmo a exatidão das informações",
   "siret_manual_title": "Adicione a sua empresa manualmente:",
   "siret_manual_company_name": "Nome da empresa",
-  "siret_manual_company_legal_form": "Forma jurídica",
-  "siret_manual_company_legal_form_EI": "Entrepreneur individuel (EI)",
-  "siret_manual_company_legal_form_EURL": "Entreprise unipersonnelle à responsabilité limitée (EURL)",
-  "siret_manual_company_legal_form_SARL": "Société à responsabilité limitée (SARL)",
-  "siret_manual_company_legal_form_SASU": "Société par actions simplifiée unipersonnelle (SASU)",
-  "siret_manual_company_legal_form_SAS": "Société par actions simplifiée (SAS)",
-  "siret_manual_company_legal_form_SA": "Société anonyme (SA)",
-  "siret_manual_company_legal_form_SNC": "Société en nom collectif (SNC)",
-  "siret_manual_company_legal_form_SCS": "Société en commandite simple (SCS)",
-  "siret_manual_company_legal_form_SCA": "Société en commandite par actions (SCA)",
-  "siret_manual_company_legal_form_SCOP": "Société coopérative de production (Scop)",
+  "siret_manual_company_legal_form": "Forma Jurídica",
+  "siret_manual_company_legal_form_EI": "Empresário individual (EI)",
+  "siret_manual_company_legal_form_EURL": "Empresa unipessoal de responsabilidade limitada",
+  "siret_manual_company_legal_form_SARL": "Sociedade de responsabilidade limitada",
+  "siret_manual_company_legal_form_SASU": "Sociedade por ações simplificadas unipessoal",
+  "siret_manual_company_legal_form_SAS": "Sociedade por ações simplificadas",
+  "siret_manual_company_legal_form_SA": "Sociedade anónima",
+  "siret_manual_company_legal_form_SNC": "Empresa em nome coletivo",
+  "siret_manual_company_legal_form_SCS": "Sociedade em comandita simples",
+  "siret_manual_company_legal_form_SCA": "Sociedade em comandita por ações",
+  "siret_manual_company_legal_form_SCOP": "Sociedade cooperativa de produção",
   "siret_manual_registration_date": "Data de registo",
   "siret_manual_registration_date_placeholder": "dd/mm/aaaa",
   "siret_update_search_assistant": "Assistente de pesquisa"
