--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_it_IT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_it_IT.json
@@ -101,7 +101,7 @@
   "telecom_pack_migration_confirm_no_commitment": "La modifica di questa offerta non comporta la sottoscrizione di nessun nuovo impegno contrattuale.",
   "telecom_pack_migration_confirm_commitment": "Alla data di fatturazione inizierà un nuovo impegno contrattuale di {{ month }} mesi.",
   "telecom_pack_migration_confirm_new_offer_price": "Il tuo nuovo abbonamento mensile è di <span class=\"text-price\">{{ price }}</span> <span class=\"text-infos\">+IVA/mese</span>, applicabile a partire dalla consegna del tuo nuovo accesso. Verrai informato via email.",
-  "telecom_pack_migration_confirm_shipping": "Hai selezionato la modalità di consegna del tuo nuovo modem tramite corriere (+ {{ price }} € +IVA).",
+  "telecom_pack_migration_confirm_shipping": "Hai selezionato la modalità di consegna del nuovo modem tramite corriere (+ {{ price }} € +IVA).",
   "telecom_pack_migration_confirm_first_mensuality": "La tua prima mensilità sarà quindi di {{ price }} +IVA.",
   "telecom_pack_migration_confirm_service_to_delete_title": "Servizi che verranno eliminati",
   "telecom_pack_migration_confirm_service_to_delete_total": "Durante la modifica dell'offerta verranno eliminati {{count}} servizi.",
@@ -159,10 +159,10 @@
   "telecom_pack_migration_confirm_resume_contact_phone": "Numero di telefono sul quale potrai essere contattato se necessario",
   "telecom_pack_migration_confirm_resume_phone_form_error": "Il numero inserito deve essere valido.",
   "telecom_pack_migration_choose_offer_error": "Si è verificato un errore durante il recupero delle offerte: {{ error }}",
-  "telecom_pack_migration_modem_yes": "Modem nove ({{ price }} +IVA/mese)",
+  "telecom_pack_migration_modem_yes": "Modem nuovo ({{ price }} +IVA/mese)",
   "telecom_pack_migration_modem_recycled": "Modem riciclato ({{ price }} +IVA/mese)",
   "telecom_pack_migration_modem_no": "Nessun modem",
   "telecom_pack_migration_modem_required": "La selezione di un tipo di modem è obbligatoria",
-  "telecom_pack_migration_confirm_modem_rental_yes": "Location modem nove",
-  "telecom_pack_migration_confirm_modem_rental_recycled": "Location modem riciclato"
+  "telecom_pack_migration_confirm_modem_rental_yes": "Locazione modem nuovo",
+  "telecom_pack_migration_confirm_modem_rental_recycled": "Locazione modem riciclato"
 }
