--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pl_PL.json
@@ -1108,7 +1108,6 @@
   "server_nutanix_cluster_node_warning_2": "Zalecamy przeprowadzenie wszystkich zmian konfiguracji bezpośrednio na dashboardzie serwera powiązanego z klastrem Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Wszystkie operacje płatnicze związane z tym serwerem są widoczne w klastrze Nutanix: {{clusterDashboardLink}}",
   "server_rtm_eol_info": "Ważna informacja dotycząca usługi Real Time Monitoring - usługa będzie działać do 30 czerwca 2022. Po tym terminie wstrzymamy wyświetlanie danych dotyczących zużycia. Nie będzie to miało wpływu na działanie serwera.",
-  "server_configuration_monitoring_cta_setting": "Skonfiguruj",
   "server_configuration_monitoring_status_disabled": "Wyłączony",
   "server_configuration_monitoring_status_proactive": "Włączony z aktywną interwencją",
   "server_configuration_monitoring_status_no-proactive": "Włączony bez aktywnej interwencji",
@@ -1125,7 +1124,5 @@
   "server_configuration_monitoring_update_modal_description_status_no-proactive": "Twój serwer jest monitorowany. Będziesz otrzymywał alerty pocztą elektroniczną na adres przypisany do kontaktu technicznego. OVHcloud nie będzie interweniować na Twojej maszynie, jeśli nie otrzyma od Ciebie takiej dyspozycji.",
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Interwencje na serwerze {{serverName}} są włączone.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Interwencje na serwerze {{serverName}} zostały wyłączone.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Wystąpił błąd podczas zmiany opcji monitoringu.",
-  "server_configuration_installation_ovh_desktop_ERP": "ERP",
-  "server_datacenter_YNM": "Bombaj (YNM {{number}}) - Indie"
+  "server_configuration_monitoring_update_modal_update_request_failed": "Wystąpił błąd podczas zmiany opcji monitoringu."
 }
