--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
@@ -12,7 +12,7 @@
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_1": "Effectuez des sauvegardes régulières",
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_2": "Profitez d'un service de sauvegarde selon vos besoins.",
   "pci_projects_project_storages_volume_backup_create_step_2_description_link": "En savoir plus sur les sauvegardes",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Prix : {{ priceValue }}",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Prix : {{ priceValue }} HT/Go/heure",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_label": "Volume Backup",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_1": "Limitez l'impact d'une perte de données non désirée de vos données applicatives.",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_2": "Le backup est stocké sur un cluster différent (Object Storage) mais sur la même localisation que votre volume.",
